--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,20 @@
     <string name="chooseChildDevicesButton">Choose Child Devices</string>
     <string name="title_activity_bluetooth_set_master_device">BluetoothSetMasterDeviceActivity</string>
     <string name="chooseMasterDeviceButton">Choose Master Device</string>
+    <string name="title_activity_main_drawer">MainDrawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Scoutinator</string>
+    <string name="nav_header_subtitle">Developed by FRC Team 107</string>
+    <string name="nav_header_desc">quack</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
+    <string name="title_activity_main">Scoutinator</string>
 
 </resources>
