--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,7 +98,6 @@
     <string name="downloadOPRs">Download OPRs</string>
     <string name="analysisOpr">OPR:</string>
     <string name="analysisDPR">DPR:</string>
-    <string name="bluetooth">Bluetooth</string>
     <string name="chooseChildDevicesButton">Choose Child Devices</string>
     <string name="title_activity_bluetooth_set_master_device">BluetoothSetMasterDeviceActivity</string>
     <string name="chooseMasterDeviceButton">Choose Master Device</string>
@@ -117,5 +116,18 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="title_activity_main">Scoutinator</string>
+    <string name="forms">Forms</string>
+    <string name="analysis">Analysis</string>
+    <string name="team_analysis">Team Analysis</string>
+    <string name="attribute_analysis">Attribute Analysis</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="send_match_data">Send Match Data</string>
+    <string name="send_pit_data">Send Pit Data</string>
+    <string name="send_concat_match_data">Send Concat. Match Data</string>
+    <string name="send_concat_pit_data">Send Concat. Pit Data</string>
+    <string name="send_pit_photos">Send Pit Photos</string>
+    <string name="settings">Settings</string>
+    <string name="pit">Pit</string>
+    <string name="advanced">Advanced</string>
 
 </resources>
