refactored FileService, added end shift button, added send button with no functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,5 +130,8 @@
     <string name="pit">Pit</string>
     <string name="advanced">Advanced</string>
     <string name="title_open_csv_file">Open CSV File</string>
+    <string name="end_shift">End Shift</string>
+    <string name="send_data">Send Data</string>
+    <string name="return_home">Return Home</string>
 
 </resources>
