--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,9 @@
     <string name="end_shift">End Shift</string>
     <string name="send_data">Send Data</string>
     <string name="return_home">Return Home</string>
+    <string name="selected_files">Selected files:</string>
+    <string name="available_files">Available files:</string>
+    <string name="file_type">File type:</string>
+    <string name="concatenate">Concatenate</string>
 
 </resources>
