--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,7 +135,10 @@
     <string name="return_home">Return Home</string>
     <string name="selected_files">Selected files:</string>
     <string name="available_files">Available files:</string>
-    <string name="file_type">File type:</string>
+    <string name="file_type">File Type:</string>
     <string name="concatenate">Concatenate</string>
+    <string name="creator_initials">Creator Initials:</string>
+    <string name="match">Match</string>
+    <string name="date_created">Date Created:</string>
 
 </resources>
