changed name to Vanguard again

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,7 +179,7 @@
     <string name="title_activity_main_drawer">MainDrawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Scoutinator</string>
+    <string name="nav_header_title">Vanguard</string>
     <string name="nav_header_subtitle">Developed by FRC Team 107</string>
     <string name="nav_header_desc">quack</string>
     <string name="action_settings">Settings</string>
